Mutable dimension whitelist and biome categories